fix text heading alignment

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body,
         animation: bounceInFromTop 0.9s ease;
       }
       .header{
-        height: 95vh;
+        height: 92vh;
       }
     
     #mobile-menu {
